# OnlineTradingPlatform

./: .evn.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_data.txt
config/: settings.py  urls.py
participants/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
participants/migrations/: 0001_initial.py
products/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
